add lang as english and title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<html lang = "en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>stats preview card </title>
 
     <link rel="stylesheet" href="./build/stylesheets/style.css" />
   </head>
