add aria landmark main instead of a plain old div

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-<html lang = "en">
+<html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>stats preview card </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>stats preview card</title>
 
     <link rel="stylesheet" href="./build/stylesheets/style.css" />
   </head>
   <body>
-   
-    <div class="card">
+    <main class="card">
       <div class="image-cover">
         <!-- <img src = './assets/image-header-desktop.jpg'> -->
         <div id="image-overlay"></div>
@@ -35,6 +34,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
   </body>
 </html>
